==> Jorge-Mendes/Agro-Shield/OtherRequiredLibraries/SDI12/SDI12.cpp <==
#include <SDI12.h>						// 0.1 header file for this library
#define _BUFFER_SIZE 64 				// 0.2 max RX buffer size
#define DISABLED 0						// 0.3 value for DISABLED state
#define ENABLED 1						// 0.4 value for ENABLED state
#define HOLDING 2 						// 0.5 value for DISABLED state
#define TRANSMITTING 3					// 0.6 value for TRANSMITTING state
#define LISTENING 4						// 0.7 value for LISTENING state
#define SPACING 830						// 0.8 bit timing in microseconds

void SDI12::setState(uint8_t state){
  if(state == HOLDING){
    pinMode(_dataPin,OUTPUT);
    digitalWrite(_dataPin,LOW);
    *digitalPinToPCMSK(_dataPin) &= ~(1<<digitalPinToPCMSKbit(_dataPin));
    return; 
  }
  if(state == TRANSMITTING){
    pinMode(_dataPin,OUTPUT);
    noInterrupts(); 			// supplied by Arduino.h, same as cli()
    return; 
  }
  if(state == LISTENING) {
    digitalWrite(_dataPin,LOW);
    pinMode(_dataPin,INPUT); 
    interrupts();				// supplied by Arduino.h, same as sei()
	*digitalPinToPCICR(_dataPin) |= (1<<digitalPinToPCICRbit(_dataPin));
    *digitalPinToPCMSK(_dataPin) |= (1<<digitalPinToPCMSKbit(_dataPin));
  } else { 						// implies state==DISABLED 
  	digitalWrite(_dataPin,LOW); 
  	pinMode(_dataPin,INPUT);
  	*digitalPinToPCMSK(_dataPin) &= ~(1<<digitalPinToPCMSKbit(_dataPin));
  	if(!*digitalPinToPCMSK(_dataPin)){
  		*digitalPinToPCICR(_dataPin) &= ~(1<<digitalPinToPCICRbit(_dataPin));
  	}
  }
}

void SDI12::wakeSensors(){
  setState(TRANSMITTING); 
  digitalWrite(_dataPin, HIGH); 
  delayMicroseconds(12100); 
  digitalWrite(_dataPin, LOW); 
  delayMicroseconds(8400);
}

void SDI12::writeChar(uint8_t out)
{

  out |= (parity_even_bit(out)<<7);			// 4.2.1 - parity bit

  digitalWrite(_dataPin, HIGH); 			// 4.2.2 - start bit
  delayMicroseconds(SPACING);

  for (byte mask = 0x01; mask; mask<<=1){	// 4.2.3 - send payload
    if(out & mask){
      digitalWrite(_dataPin, LOW);
    }
    else{
      digitalWrite(_dataPin, HIGH);
    } 
    delayMicroseconds(SPACING);
  }
  
  digitalWrite(_dataPin, LOW);				// 4.2.4 - stop bit
  delayMicroseconds(SPACING); 
}

void SDI12::receiveChar()
{
  if (digitalRead(_dataPin))				// 6.2.1 - Start bit?
  {
  	uint8_t newChar = 0;					// 6.2.2 - Make room for char.
  	
    delayMicroseconds(SPACING/2);			// 6.2.3 - Wait 1/2 SPACING

    for (uint8_t i=0x1; i<0x80; i <<= 1)	// 6.2.4 - read the 7 data bits
    {
      delayMicroseconds(SPACING);
      uint8_t noti = ~i;
      if (!digitalRead(_dataPin))
        newChar |= i;
      else 
        newChar &= noti;
    }
    
    delayMicroseconds(SPACING);				// 6.2.5 - Skip the parity bit. 
	delayMicroseconds(SPACING);				// 6.2.6 - Skip the stop bit. 

										// 6.2.7 - Overflow? If not, proceed.
    if ((_rxBufferTail + 1) % _BUFFER_SIZE == _rxBufferHead) 
    { _bufferOverflow = true; 
    } else {							// 6.2.8 - Save char, advance tail. 
      _rxBuffer[_rxBufferTail] = newChar; 
      _rxBufferTail = (_rxBufferTail + 1) % _BUFFER_SIZE;
    }
  }
}
