==> andremoa/depthStations/multiNose_sensor/SDI12.cpp <==
#define F_CPU 8000000L
#include "SDI12.h"					// 0.1 header file for this library
#define _BUFFER_SIZE   64 			// 0.2 max RX buffer size
#define DISABLED       0			// 0.3 value for DISABLED state
#define ENABLED        1			// 0.4 value for ENABLED state
#define HOLDING        2 			// 0.5 value for DISABLED state
#define TRANSMITTING   3			// 0.6 value for TRANSMITTING state
#define LISTENING      4			// 0.7 value for LISTENING state
#define SPACING        830			// 0.8 bit timing in microseconds
#define PIN            PB1  //PB0
#define DPIN           DDB1 //DDRB0
#define DIRECTION_PORT DDRB //DDRB
#define IO_PORT        PORTB //PORTB
#define PIN_STATUS     PINB //PINB
#define PIN_STATUS_PIN PORTB1
#define PCMSK          PCMSK0
#define PCMSKPIN       PCINT1
#define GIMSKPIN       PCIE0

void SDI12::setState(uint8_t state){
  if(state == HOLDING){
    // Set direction of pin in pure avr as OUTPUT
    DIRECTION_PORT = (1<<DPIN);
    //pinMode(_dataPin,OUTPUT);
    
    // Digital Write LOW = 0
    IO_PORT = (0<<PIN);
    //digitalWrite(_dataPin,LOW);
      
    //*digitalPinToPCMSK(PB0) &= ~(1<<digitalPinToPCMSKbit(PB0));
    PCMSK &= ~(1<<PCMSKPIN);
    return; 
  }
  if(state == TRANSMITTING){
    // Set direction of pin in pure avr
    //pinMode(_dataPin,OUTPUT);
    DIRECTION_PORT = (1<<1);

    //noInterrupts(); 			// supplied by Arduino.h, same as cli()
    cli();
    
    return; 
  }
  if(state == LISTENING) {
    //digitalWrite(_dataPin,LOW);
    // Digital Write LOW = 0
    IO_PORT = (0<<PIN);
    
    //pinMode(_dataPin,INPUT);
    // Set direction of pin in pure avr as INPUT
    DIRECTION_PORT = (0<<DPIN);
    
    //interrupts();				// supplied by Arduino.h, same as sei()
    sei();
    
    //*digitalPinToPCICR(PB0) |= (1<<digitalPinToPCICRbit(PB0));
    //*digitalPinToPCMSK(PB0) |= (1<<digitalPinToPCMSKbit(PB0));
    PCICR |= (1<<GIMSKPIN);    //
    PCMSK |= (1<<PCMSKPIN);   // Pin Change Enable Mask PCINT5 (Here)
  } else { 						// implies state==DISABLED 
    //digitalWrite(_dataPin,LOW);
    // Digital Write LOW = 0
    IO_PORT = (0<<PIN);
      
    //pinMode(_dataPin,INPUT);
    // Set direction of pin in pure avr as INPUT
    DIRECTION_PORT = (0<<DPIN);
    
  	//*digitalPinToPCMSK(PB0) &= ~(1<<digitalPinToPCMSKbit(PB0));
    PCMSK &= ~(1<<PCMSKPIN);
  	//if(!*digitalPinToPCMSK(PB0)){
    if (!(PCMSK&(1<<PCMSKPIN))){
  		//*digitalPinToPCICR(PB0) &= ~(1<<digitalPinToPCICRbit(PB0));
        PCICR &= ~(1<<GIMSKPIN);
  	}
  }
}

void SDI12::wakeSensors(){
  
  //mySerial.print("WAKE");
  setState(TRANSMITTING); 
  //digitalWrite(_dataPin, HIGH);
  IO_PORT = (1<<1);
  //delayMicroseconds(12100);
  _delay_us(12100);
    
    
	

  //digitalWrite(_dataPin, LOW);
  IO_PORT = (0<<PIN);
    
  //delayMicroseconds(8400);
  _delay_us(8400);
  //mySerial.print("GO");
}

void SDI12::writeChar(uint8_t out)
{

  out |= (parity_even_bit(out)<<7);			// 4.2.1 - parity bit

  //digitalWrite(_dataPin, HIGH); 			// 4.2.2 - start bit
  IO_PORT = (1<<PIN);
  //delayMicroseconds(SPACING);
  _delay_us(SPACING);

  for (uint8_t mask = 0x01; mask; mask<<=1){	// 4.2.3 - send payload
    if(out & mask){
      //digitalWrite(_dataPin, LOW);
      IO_PORT = (0<<PIN);
    }
    else{
      //digitalWrite(_dataPin, HIGH);
      IO_PORT = (1<<PIN);
    } 
    //delayMicroseconds(SPACING);
    _delay_us(SPACING);
  }
  
  //digitalWrite(_dataPin, LOW);				// 4.2.4 - stop bit
  IO_PORT = (0<<PIN);
  
  //delayMicroseconds(SPACING);
  _delay_us(SPACING);
}

void SDI12::receiveChar()
{
  if (PIN_STATUS&(1<<PIN))				// 6.2.1 - Start bit?
  //if (digitalRead(_dataPin))
  {
  	uint8_t newChar = 0;					// 6.2.2 - Make room for char.
  	
    //delayMicroseconds(SPACING/2);			// 6.2.3 - Wait 1/2 SPACING
    _delay_us(SPACING/2);
    
    for (uint8_t i=0x1; i<0x80; i <<= 1)	// 6.2.4 - read the 7 data bits
    {
      //delayMicroseconds(SPACING);
      _delay_us(SPACING);
      uint8_t noti = ~i;
      
      if(!(PIN_STATUS&(1<<PIN))){
      //if (!digitalRead(_dataPin))
        newChar |= i;
      }else{
        newChar &= noti;
      }
    }
    
    //delayMicroseconds(SPACING);				// 6.2.5 - Skip the parity bit.
    _delay_us(SPACING);
	//delayMicroseconds(SPACING);				// 6.2.6 - Skip the stop bit.
    _delay_us(SPACING);

										// 6.2.7 - Overflow? If not, proceed.
    if ((_rxBufferTail + 1) % _BUFFER_SIZE == _rxBufferHead) 
    { _bufferOverflow = true; 
    } else {							// 6.2.8 - Save char, advance tail. 
      _rxBuffer[_rxBufferTail] = newChar; 
      _rxBufferTail = (_rxBufferTail + 1) % _BUFFER_SIZE;
    }
  }
}
